--- a/leaflet.html
+++ b/leaflet.html
@@ -35,7 +35,7 @@ h1, p {
   /* no grid support? */
   .block-a, .block-b, .block-c {
     float: left;
-    width: 19.1489%;
+    width: 79.1489%;
   }
 
   #map-id {
@@ -95,8 +95,8 @@ h1, p {
     <h1>Using negative space</h1>
   </div>
   
-  <div class="block-a">Block A</div>
-  <div class="block-b">Block B</div>
+  <div class="block-a"><h3>Base map</h3>(styling can be done in mapbox studio classic; geoserver; </div>
+  <div class="block-b"><h3>Data layer</h3>(styling can be done with the javascript library (leaflet, openlayers)</div>
   <div class="block-c">Block C</div>
 </div>
 
